Fixes #159 by correctly assigning the relationship name for intermediate parents when a hierarchy rollup is not used in conjunction with the grandparent relationship field path

--- a/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
+++ b/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
@@ -2,10 +2,14 @@
 private class RollupRelationshipFieldFinderTests {
   static RollupControl__mdt control = new RollupControl__mdt(MaxLookupRowsBeforeBatching__c = 10000);
 
+  @TestSetup
+  static void setup() {
+    insert new Account(Name = RollupRelationshipFieldFinderTests.class.getName());
+  }
+
   @IsTest
   static void shouldFindParentRelationshipBetweenStandardObjects() {
-    Account parent = new Account(Name = 'Parent relationship between standard objects');
-    insert parent;
+    Account parent = [SELECT Id FROM Account];
 
     ContactPointAddress cpa = new ContactPointAddress(ParentId = parent.Id, Name = 'Child cpa');
     insert cpa;
@@ -40,8 +44,7 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldFindGrandparentRelationshipBetweenStandardObjects() {
-    Account parent = new Account(Name = 'Parent account looking up to User');
-    insert parent;
+    Account parent = [SELECT Id FROM Account];
 
     ContactPointAddress cpa = new ContactPointAddress(ParentId = parent.Id, Name = 'Child looking up to account');
     insert cpa;
@@ -66,8 +69,7 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldBailEarlyIfQueryCountExceedsControlCount() {
-    Account acc = new Account(Name = 'Parent to cpa');
-    insert acc;
+    Account acc = [SELECT Id FROM Account];
 
     ContactPointAddress cpa = new ContactPointAddress(ParentId = acc.Id, Name = 'Child cpa');
     control.MaxNumberOfQueries__c = 1;
@@ -90,7 +92,7 @@ private class RollupRelationshipFieldFinderTests {
     Account intermediateTwo = new Account(Name = 'Intermediate 2');
     insert new List<Account>{ intermediateOne, intermediateTwo };
 
-    List<Account> updatedAccounts = [SELECT Id, OwnerId, Name FROM Account];
+    List<Account> updatedAccounts = [SELECT Id, OwnerId, Name FROM Account WHERE NAME LIKE 'Intermediate%' LIMIT 2];
     if (updatedAccounts.size() == 2) {
       // don't run the rest of the test if the org has some kind of ownership assignment going on that would invalidate
       // the results
@@ -137,8 +139,7 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldReportReparentingCorrectlyForNulls() {
-    Account intermediateOne = new Account(Name = 'Intermediate 1');
-    insert new List<Account>{ intermediateOne };
+    Account intermediateOne = [SELECT Id FROM Account];
 
     ContactPointAddress cpa = new ContactPointAddress(ParentId = intermediateOne.Id, Name = 'Child reparented');
     List<ContactPointAddress> cpas = new List<ContactPointAddress>{ cpa };
@@ -174,24 +175,24 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldReportReparentingCorrectlyForImmediateParent() {
-    Account parentOne = new Account(Name = 'Parent1');
+    Account parentOne = [SELECT Id FROM Account];
     Account parentTwo = new Account(Name = 'Parent2');
-    insert new List<Account>{ parentOne, parentTwo };
+    insert parentTwo;
 
     ContactPointAddress cpaOne = new ContactPointAddress(ParentId = parentOne.Id, Name = 'Child1');
     ContactPointAddress cpaTwo = new ContactPointAddress(ParentId = parentOne.Id, Name = 'Child2');
-    List<ContactPointAddress> opps = new List<ContactPointAddress>{ cpaOne, cpaTwo };
-    insert opps;
+    List<ContactPointAddress> cpas = new List<ContactPointAddress>{ cpaOne, cpaTwo };
+    insert cpas;
 
-    Map<Id, SObject> oldOpps = new Map<Id, SObject>{ cpaOne.Id => cpaOne, cpaTwo.Id => new ContactPointAddress(ParentId = parentTwo.Id) };
+    Map<Id, SObject> oldCpas = new Map<Id, SObject>{ cpaOne.Id => cpaOne, cpaTwo.Id => new ContactPointAddress(ParentId = parentTwo.Id) };
     RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
       control,
       new Rollup__mdt(GrandparentRelationshipFieldPath__c = 'Name'),
       new Set<String>{ 'Name', 'Id' },
       Account.SObjectType,
-      oldOpps
+      oldCpas
     );
-    RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(opps);
+    RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
     System.assertEquals(true, traversal.isUltimatelyReparented(cpaTwo, 'ParentId'));
     System.assertEquals(false, traversal.isUltimatelyReparented(cpaOne, 'ParentId'));
@@ -199,8 +200,7 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldTrackMultipleParents() {
-    Account parentOne = new Account(Name = 'SoloParent');
-    insert parentOne;
+    Account parentOne = [SELECT Id FROM Account];
 
     ContactPointAddress cpaOne = new ContactPointAddress(ParentId = parentOne.Id, Name = 'FirstParentedChild');
     ContactPointAddress cpaTwo = new ContactPointAddress(ParentId = parentOne.Id, Name = 'SecondParentedChild');
@@ -263,8 +263,7 @@ private class RollupRelationshipFieldFinderTests {
 
   @IsTest
   static void shouldTraverseAllTheWayUpWhenMetadataFlagIsEnabled() {
-    Account parentOne = new Account(Name = 'ultimate parent');
-    insert parentOne;
+    Account parentOne = [SELECT Id FROM Account];
     Account parentTwo = new Account(Name = 'child parent', ParentId = parentOne.Id);
     // also start another chain of relationships
     Account secondParent = new Account(Name = 'second child parent', ParentId = parentOne.Id);
@@ -304,5 +303,33 @@ private class RollupRelationshipFieldFinderTests {
     Account expectedAcc = (Account) RollupTestUtils.queryRecord(parentOne.Id);
     System.assertEquals(expectedAcc, traversal.retrieveParent(cpaOne.Id), 'Ultimate parent should have been used!');
     System.assertEquals(expectedAcc, traversal.retrieveParent(cpaTwo.Id), 'Ultimate parent should be found even if 5+ levels deep in hierarchy');
+  }
+
+  @IsTest
+  static void shouldWorkWithHierarchiesWhereLookupFieldDiffersFromHierarchy() {
+    Account hierarchyParent = [SELECT Id FROM Account];
+    Account parent = new Account(Name = 'child parent', ParentId = hierarchyParent.Id);
+    insert parent;
+
+    Contact con = new Contact(LastName = 'hierarchy child', AccountId = parent.Id);
+    List<Contact> cons = new List<Contact>{ con };
+    insert cons;
+
+    RollupRelationshipFieldFinder finder = new RollupRelationshipFieldFinder(
+      control,
+      new Rollup__mdt(
+        RollupToUltimateParent__c = true,
+        UltimateParentLookup__c = 'ParentId',
+        LookupFieldOnCalcItem__c = 'AccountId'
+      ),
+      new Set<String>{ 'Name', 'Id' },
+      Account.SObjectType,
+      new Map<Id, SObject>()
+    );
+
+    RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cons);
+    Account expectedAcc = [SELECT Id FROM Account WHERE Id = :hierarchyParent.Id];
+    Account retrievedAcc = (Account) traversal.retrieveParent(con.Id);
+    System.assertEquals(expectedAcc.Id, retrievedAcc.Id, 'Should correctly retrieve hierarchy');
   }
 }
