--- a/rollup/core/classes/RollupDeferredFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupDeferredFullRecalcProcessor.cls
@@ -24,7 +24,7 @@ public class RollupDeferredFullRecalcProcessor extends RollupAsyncProcessor.Full
   private RollupAsyncProcessor getProcessor() {
     this.isProcessed = true;
     List<SObject> localCalcItems = Database.query(this.queryString);
-    RollupAsyncProcessor processor = (RollupAsyncProcessor) this.getAsyncRollup(
+    RollupAsyncProcessor processor = this.getAsyncRollup(
       this.rollupInfo,
       this.calcItemType,
       localCalcItems,
