--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -28,7 +28,7 @@ public virtual class RollupFullBatchRecalculator extends RollupAsyncProcessor.Fu
      * being batched, even if the inner class is just extending the functionality of its
      * parent class
      */
-    this.processDelegatedFullRecalcRollup(this.rollupInfo, calcItems, new Map<Id, SObject>());
+    this.processDelegatedFullRecalcRollup(this.rollupInfo, calcItems, new Map<Id, SObject>(), this);
     RollupLogger.Instance.save();
   }
 
